[package]
edition = "2021"
name = "lsq-encryption"
version = "0.0.1"

[dependencies]
thiserror = "1"
napi = { version = "2", default-features = false, optional = true }
md-5 = "0.10"
age = { version = "0.9.2", features = ["armor"] }
secrecy = "0.8.0"
x25519-dalek = "1"
chacha20poly1305 = "0.10"
hex = "0.4"
unicode-normalization = "0.1"

[features]
default = []
napi = ["dep:napi"]
