[package]
name = "rsapi-impl"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["default", "fs", "macros"] }
futures = "0.3"
md-5 = "0.10"
walkdir = "2"
dunce = "1.0.2"
once_cell = "1.14.0"
thiserror = "1"

napi = { version = "2", default-features = false, optional = true }
napi-derive = { version = "2", optional = true }

lsq-encryption = { path = "../lsq-encryption" }
sync = { path = "../sync" }
unicode-normalization = "0.1"
log = "0.4"

[features]
default = []
napi = ["dep:napi", "dep:napi-derive"]
