[package]
name = "sync"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.14", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
    "gzip",
    "socks",
] }
md-5 = "0.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

s3-presign = "0.0.2"
http = "0.2"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
rand = "0.8"
futures = { version = "0.3", features = ["executor"] }
bytes = "1.2"
log = "0.4"
hyper = "0.14"
once_cell = "1.18.0"
